# buttons-bebe

./: .env.example  .gitignore  AGENTS.md  Buttons-Bebe-Competitive-Brief.html  Buttons-Bebe-Phase-2-3-Plan.pptx  CLAUDE.md  CONTINUE-HERE.md  DESIGN-CRITIQUE.md  DEV-ISSUES.md  IMPROVEMENT-PLAN.md  INCONSISTENCIES.md  README.md  SPRINT-2-PLAN.md  SPRINT-feedback-collector.md  SPRINT-notice-board-2026-07-12.md  TESTING-READINESS.md  UX-IMPROVEMENTS-TASKLIST.md  cursor.md  env.example  gw_backup_cleanup.sh  server-fixes.sh
HANDOVER/: 01-executive-summary.md  02-live-architecture.md  03-live-components-reference.md  04-knowledge-base-and-learning.md  05-services-deploy-and-secrets.md  06-known-issues-and-completeness.md  07-fable-rebuild.md  08-phase-2-3-roadmap.md  09-repository-map.md  10-fable-branch-quarantine.md  10-github-and-onboarding.md  11-glossary.md  README.md
console-src/: index.html
dashboard/: DESIGN-SYSTEM.md  (+4 more)
processor/: classifier.py  config.py  draft_generator.py  feedback_collector.py  gorgias_writer.py  hermes_runner.py  kb_client.py  logging_setup.py  orchestrator.py  pyproject.toml  run.sh  test_e2e.py  test_feedback_retirement.py  test_hermes_readonly_prompt.py  test_whatsapp_notifier.py  whatsapp_notifier.py
webhook/: .env.example  .gitignore  Caddyfile  pyproject.toml  run.sh  test_notification_api.py  test_notifications.py  test_webhook.py
webhook/src/bb_webhook/: __init__.py  app.py  config.py  dashboard.html  database.py  gorgias_client.py  learning.py  logging_utils.py  notifications.py  review_console.html  webhook_handler.py
(+441 files in other folders)
