[project]
name = "bb-processor"
version = "0.1.0"
description = "Buttons Bebe job processor"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"